[tool.poetry]
name = "learning-management-system"
version = "0.1.0"
description = ""
authors = ["tejasmahalinga <tejasmahalinga@gmail.com>"]
readme = "README.md"
packages = [{include = "learning_management_system"}]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
